--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -48,11 +48,13 @@
     border: 1px solid gray;
     font-size: 18px;
     padding-left: 20px;
+    
 }
 
 .loginInput:focus{
     outline: none;
 }
+
 
 .loginButton{
     height: 50px;
@@ -63,6 +65,9 @@
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
+}
+.loginButton:disabled{
+  cursor:not-allowed;
 }
 
 .loginForgot{
